# py-platoo

./: .flake8  .gitignore  README.md  data_layer.py  get_openapi.sh  hypercorn.toml  hypercorn_run.sh  hypercorn_run_no_db.sh  noxfile.py  pg_data_layer.py  pyproject.toml
data_layer/: __init__.py
docs/: openapi.json
src/api/: __init__.py
src/api/static/: formSubmit.js  style001.css
src/api/templates/: memo_template.html
src/data_layer/: pg_data_layer.py
tests/: test_api.py
tests/manual/: curl_delete  curl_get_1  curl_get_2  curl_get_count  curl_oapi  curl_post  py_db_test.py
