[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "quart (>=0.20.0) ; python_version >= '3.9'",
    "quart-schema (>=0.21.0,<0.22.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "aiopg (>=1.4.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "api", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.2"
coverage = {extras = ["toml"], version = "^7.6.10"}
flake8 = "^7.1.1"
flake8-bugbear = "^24.12.12"
mypy = "^1.14.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api:quart_run"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

